rework of create forms

--- a/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
@@ -115,7 +115,7 @@
                         <i class="nav-icon fas fa-th"></i>
                         <p>Subjects</p>
                     </a>
-                    <a asp-controller="Admin" asp-action="Create" class="nav-link d-inline">
+                    <a asp-controller="Subject" asp-action="Create" class="nav-link d-inline">
                         <i class="nav-icon fa fa-plus-circle"></i>
                     </a>
                 </li>
