--- a/FM_MyStat.Web/Views/Group/Create.cshtml
+++ b/FM_MyStat.Web/Views/Group/Create.cshtml
@@ -5,6 +5,82 @@
     ViewData["Title"] = "Group";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
+<style>
+    .card-header {
+        background: rgb(92,121,171);
+        background: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
+        color: white;
+    }
+
+    .btn-primary {
+        background: rgb(92,121,171);
+        background: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
+        color: white;
+    }
+
+    .form__group {
+        position: relative;
+        padding: 15px 0 0;
+        margin-top: 10px;
+        width: 100%;
+    }
+
+    .form__field {
+        font-family: inherit;
+        width: 100%;
+        border: 0;
+        border-bottom: 2px solid #9b9b9b;
+        outline: 0;
+        font-size: 1.3rem;
+        color: black;
+        padding: 7px 0;
+        background: transparent;
+        transition: border-color 0.2s;
+    }
+
+        .form__field::placeholder {
+            color: transparent;
+        }
+
+        .form__field:placeholder-shown ~ .form__label {
+            font-size: 1.3rem;
+            cursor: text;
+            top: 20px;
+        }
+
+    .form__label {
+        position: absolute;
+        top: 0;
+        display: block;
+        transition: 0.2s;
+        font-size: 1rem;
+        color: #9b9b9b;
+    }
+
+    .form__field:focus ~ .form__label {
+        position: absolute;
+        top: 0;
+        display: block;
+        transition: 0.2s;
+        font-size: 1rem;
+        color: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
+        font-weight: 700;
+        padding-bottom: 6px;
+        font-weight: 700;
+        border-width: 3px;
+        border-image: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
+        border-image-slice: 1;
+    }
+
+    /* Reset input */
+    .form__field:required,
+    .form__field:invalid {
+        box-shadow: none;
+    }
+
+    }
+</style>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -29,15 +105,7 @@
         <div class="container-fluid">
             <!-- SELECT2 EXAMPLE -->
             <div class="card card-default">
-                <div class="card-header">
-                    <h3 class="card-title">Create group</h3>
 
-                    <div class="card-tools">
-                        <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                            <i class="fas fa-minus"></i>
-                        </button>
-                    </div>
-                </div>
                 <!-- /.card-header -->
                 <div class="card-body">
                     <div class="row">
@@ -54,25 +122,25 @@
                                 }
                                 <form method="post" asp-action="Create">
                                     <div class="card-body">
-                                        <div class="form-group">
-                                            <label for="Input">Name</label>
-                                            <input type="text" name="Name" class="form-control" id="Name" placeholder="Enter Name groups">
+                                        <div class="form__group field">
+                                            <input type="text" class="form__field" placeholder="Name groups" name="Name" id="Name" required />
+                                            <label for="Name" class="form__label">Name</label>
                                         </div>
 
                                         <div class="mb-3">
                                             <div class="form-group">
-                                                <label>Teacher</label>
+                                                <label style="color:#9b9b9b">Teacher</label>
                                                 @Html.DropDownList("TeacherId", (SelectList)ViewBag.TeacherList, "-- Select Teacher --",  htmlAttributes: new { @class = "form-control" })
                                             </div>
-                                        </div>
-
+                                        </div>                                  
                                     </div>
-                                   
+
                                     <!-- /.card-body -->
                                     <div class="card-footer">
                                         <button type="submit" class="btn btn-primary">Create</button>
                                     </div>
                                 </form>
+
                             </div>
                         </div>
                     </div>
