--- a/FM_MyStat.Web/Views/Student/GetAll.cshtml
+++ b/FM_MyStat.Web/Views/Student/GetAll.cshtml
@@ -87,13 +87,10 @@
                     <div class="col-md-3 mb-4">
                         <div class="card">
                             <div class="card-header">
-                                <h5 class="card-title">@item.FirstName @item.LastName</h5>
+                                <h5 class="card-title">@item.LastName @item.FirstName @item.SurName</h5>
                             </div>
                             <div class="card-body">
                                 <p class="card-text"><strong>Email:</strong> @item.Email</p>
-                                <p class="card-text"><strong>FirstName:</strong> @item.FirstName</p>
-                                <p class="card-text"><strong>SurName:</strong> @item.SurName</p>
-                                <p class="card-text"><strong>LastName:</strong> @item.LastName</p>
                                 <p class="card-text"><strong>EmailConfirmed:</strong> @item.EmailConfirmed</p>
                                 <p class="card-text"><strong>LockedOut:</strong> @item.LockedOut</p>
                                 <p class="card-text"><strong>PhoneNumber:</strong> @item.PhoneNumber</p>
