--- a/FM_MyStat.Web/Views/Admin/GetAll.cshtml
+++ b/FM_MyStat.Web/Views/Admin/GetAll.cshtml
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="~/assets/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="~/assets/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
     <link rel="stylesheet" href="~/assets/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
+    <link rel="stylesheet" href="~/css/stulescards.css" />
 }
 
 <!-- Content Wrapper. Contains page content -->
@@ -25,13 +26,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>All users</h1>
-                </div>
-                <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">Users</li>
-                    </ol>
+                    <h1>All admins</h1>
                 </div>
             </div>
         </div><!-- /.container-fluid -->
@@ -41,57 +36,31 @@
     <section class="content">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-header">
-                            <h3 class="card-title">User list with minimal information</h3>
+                @foreach (var item in Model)
+                {
+                    <div class="col-md-3 mb-4">
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="card-title">@item.LastName @item.FirstName @item.SurName</h5>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text"><strong>Email:</strong> @item.Email</p>
+                                <p class="card-text"><strong>EmailConfirmed:</strong> @item.EmailConfirmed</p>
+                                <p class="card-text"><strong>LockedOut:</strong> @item.LockedOut</p>
+                                <p class="card-text"><strong>PhoneNumber:</strong> @item.PhoneNumber</p>
+                            </div>
+                            @if (item.Email != user.Email)
+                            {
+                                <div class="card-footer">
+                                    <a asp-controller="Admin" asp-action="Edit" asp-route-id="@item.Id" class="button-28">Edit</a>
+                                    <a asp-controller="Admin" asp-action="Delete" asp-route-id="@item.Id" class="button-28">Delete</a>
+                                </div>
+                            }
                         </div>
-                        <!-- /.card-header -->
-                        <div class="card-body">
-                            <table id="example2" class="table table-bordered table-hover">
-                                <thead>
-                                    <tr>
-                                        <th>Email</th>
-                                        <th>FirstName</th>
-                                        <th>SurName</th>
-                                        <th>LastName</th>
-                                        <th>EmailConfirmed</th>
-                                        <th>LockedOut</th>
-                                        <th>PhoneNumber</th>
-                                        <th>Edit</th>
-                                        <th>Delete</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in Model)
-                                    {
-                                        <tr>
-                                            <td>@item.Email</td>
-                                            <td>@item.FirstName</td>
-                                            <td>@item.SurName</td>
-                                            <td>@item.LastName</td>
-                                            <td>@item.EmailConfirmed</td>
-                                            <td>@item.LockedOut</td>
-                                            <td>@item.PhoneNumber</td>
-                                            @if(item.Email != user.Email)
-                                            {
-                                                <td><a asp-controller="Admin" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-block btn-warning btn-sm">Edit</a></td>
-                                                <td><a asp-controller="Admin" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-block btn-danger btn-sm">Delete</a></td>
-                                            }
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table>
-                        </div>
-                        <!-- /.card-body -->
                     </div>
-                    <!-- /.card -->
-                </div>
+                }
             </div>
-            <!-- /.col -->
-            <!-- /.row -->
         </div>
-        <!-- /.container-fluid -->
     </section>
 </div>
 <!-- /.content -->
