--- a/FM_MyStat.Web/Views/Shared/_StudentLayout.cshtml
+++ b/FM_MyStat.Web/Views/Shared/_StudentLayout.cshtml
@@ -5,7 +5,7 @@
     <partial name="./StudentDashboard/_Header.cshtml" />
 </head>
 <body class="hold-transition sidebar-mini">
-    <div class="wrapper">
+    <div>
         <partial name="./StudentDashboard/_NavBar.cshtml" />
         <partial name="./StudentDashboard/_SideBar.cshtml" />
         @RenderBody()
