--- a/FM_MyStat.Web/Views/Student/GetAll.cshtml
+++ b/FM_MyStat.Web/Views/Student/GetAll.cshtml
@@ -16,48 +16,22 @@
     <link rel="stylesheet" href="~/assets/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="~/assets/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
     <link rel="stylesheet" href="~/assets/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
+    <link rel="stylesheet" href="~/css/stulescards.css"/>
 }
 
-<style>
-    .card-header{
-        background: rgb(92,121,171);
-        background: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
-        color:white;
-    }
-    .card-footer{
-        background: rgb(92,121,171);
-        background: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
-        color: white;
-    }
-
-    .button-28 {
-        background-color: #fff;
-        border: 0 solid #e2e8f0;
-        border-radius: 30px;
-        box-sizing: border-box;
-        color: #0d172a;
-        cursor: pointer;
-        display: inline-block;
-        font-family: "Basier circle",-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-        font-size: 1.1rem;
-        font-weight: 600;
-        line-height: 1;
-        padding: 10px 1.6rem;        
-        text-align: center;
-        text-decoration: none #0d172a solid;
-        text-decoration-thickness: auto;
-        transition: all .1s cubic-bezier(.4, 0, .2, 1);
-        box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
-        user-select: none;
-        -webkit-user-select: none;
-        touch-action: manipulation;
-    }
-
-        .button-28:hover {
-            background-color: #1e293b;
-            color: #fff;
-        }
-</style>
+@if (User.IsInRole("Administrator"))
+{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+}
+else if (User.IsInRole("Teacher"))
+{
+    Layout = "~/Views/Shared/_TeacherLayout.cshtml";
+}
+else
+{
+    ViewData["Title"] = "News";
+    Layout = "~/Views/Shared/_DefaultLayout.cshtml";
+}
 
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
@@ -66,13 +40,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>All users</h1>
-                </div>
-                <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">Users</li>
-                    </ol>
+                    <h1>All students</h1>
                 </div>
             </div>
         </div><!-- /.container-fluid -->
