--- a/FM_MyStat.Web/Views/Group/GetAll.cshtml
+++ b/FM_MyStat.Web/Views/Group/GetAll.cshtml
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="~/dashboard/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" href="~/dashboard/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
 <link rel="stylesheet" href="~/dashboard/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
+<link rel="stylesheet" href="~/css/stulescards.css" />
 
 @{
     ViewData["Title"] = "Group";
@@ -17,66 +18,32 @@
                 <div class="col-sm-6">
                     <h1>All Groups</h1>
                 </div>
-                <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a asp-controller="Admin" asp-action="Index">Home</a></li>
-                        <li class="breadcrumb-item active">Groups</li>
-                    </ol>
-                </div>
             </div>
         </div>
     </section>
     <section class="content">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-header">
-                            <h3 class="card-title">Group list with minimal information</h3>
+                @foreach (var item in Model)
+                {
+                    <div class="col-md-3 mb-4">
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="card-title">@item.Name</h5>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text"><strong>Teacher:</strong></p>
+                                <p class="card-text">@item.Teacher</p>
+                            </div>
+                            <div class="card-footer">
+                                <a asp-controller="Group" asp-action="Update" asp-route-id="@item.Id" class="button-28">Edit</a>
+                                <a asp-controller="Group" asp-action="Delete" asp-route-id="@item.Id" class="button-28">Delete</a>
+                                <a asp-controller="Student" asp-action="GetByGroupId" asp-route-id="@item.Id" class="button-28">Students</a>
+                            </div>
                         </div>
-
-                        <div class="card-body">
-                            <table id="example2" class="table table-bordered table-hover dataTable dtr-inline" aria-describedby="example2_info">
-                                <thead>
-                                    <tr>
-                                        <th>Id</th>
-                                        <th>Name</th>
-                                        <th>Teacher</th>
-                                        <th>Students</th>
-                                        @if (@User.IsInRole("Administrator"))
-                                        {
-                                            <th>Edit</th>
-                                            <th>Delete</th>
-                                        }
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in Model)
-                                    {
-                                        <tr>
-                                            <td>@item.Id</td>
-                                            <td>@item.Name</td>
-                                            <td>@item.Teacher</td>
-                                            <td><a asp-controller="Student" asp-action="GetByGroupId" asp-route-id="@item.Id" class="btn btn-block btn-warning btn-sm">Students</a></td>
-                                            @if (@User.IsInRole("Administrator"))
-                                            {
-                                                <td><a asp-controller="Group" asp-action="Update" asp-route-id="@item.Id" class="btn btn-block btn-warning btn-sm">Edit</a></td>
-                                                <td><a asp-controller="Group" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-block btn-danger btn-sm">Delete</a></td>
-                                            }
-                                        </tr>
-                                    }
-                                </tbody>
-
-                            </table>
-                        </div>
-                        <!-- /.card-body -->
                     </div>
-                    <!-- /.card -->
-                </div>
+                }
             </div>
-            <!-- /.col -->
-            <!-- /.row -->
         </div>
-        <!-- /.container-fluid -->
     </section>
 </div>
