--- a/FM_MyStat.Web/Views/News/ManageNews.cshtml
+++ b/FM_MyStat.Web/Views/News/ManageNews.cshtml
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="~/assets/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="~/assets/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
     <link rel="stylesheet" href="~/assets/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
+    <link rel="stylesheet" href="~/css/stulescards.css" />
 }
 
 <!-- Content Wrapper. Contains page content -->
@@ -27,12 +28,6 @@
                 <div class="col-sm-6">
                     <h1>All news</h1>
                 </div>
-                <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">News</li>
-                    </ol>
-                </div>
             </div>
         </div><!-- /.container-fluid -->
     </section>
@@ -41,50 +36,27 @@
     <section class="content">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-header">
-                            <h3 class="card-title">News schedule</h3>
+                @foreach (var item in Model)
+                {
+                    <div class="col-md-3 mb-4">
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="card-title">@item.Title</h5>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text"><strong>Name:</strong> @item.Description</p>
+                                <p class="card-text"><strong>Name:</strong> @item.Time</p>
+                                <p class="card-text"><strong>Name:</strong> @item.TimePublication</p>
+                            </div>
+                            <div class="card-footer">
+                                <a asp-controller="News" asp-action="Edit" asp-route-id="@item.Id" class="button-28">Edit</a>
+                                <a asp-controller="News" asp-action="Delete" asp-route-id="@item.Id" class="button-28">Delete</a>
+                            </div>
                         </div>
-                        <!-- /.card-header -->
-                        <div class="card-body">
-                            <table id="example2" class="table table-bordered table-hover">
-                                <thead>
-                                    <tr>
-                                        <th>Id</th>
-                                        <th>Title</th>
-                                        <th>Description</th>
-                                        <th>TimePublication</th>
-                                        <th>Time</th>
-                                        <th>Edit</th>
-                                        <th>Delete</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in Model)
-                                    {
-                                        <tr>
-                                            <td>@item.Id</td>
-                                            <td>@item.Title</td>
-                                            <td>@item.Description</td>
-                                            <td>@item.TimePublication</td>
-                                            <td>@item.Time</td>
-                                            <td><a asp-controller="News" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-block btn-warning btn-sm">Edit</a></td>
-                                            <td><a asp-controller="News" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-block btn-danger btn-sm">Delete</a></td>
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table>
-                        </div>
-                        <!-- /.card-body -->
                     </div>
-                    <!-- /.card -->
-                </div>
+                }
             </div>
-            <!-- /.col -->
-            <!-- /.row -->
         </div>
-        <!-- /.container-fluid -->
     </section>
 </div>
 <!-- /.content -->
