--- a/FM_MyStat.Web/Views/Shared/AdminDashboard/_FooterIncludes.cshtml
+++ b/FM_MyStat.Web/Views/Shared/AdminDashboard/_FooterIncludes.cshtml
@@ -7,6 +7,6 @@
 <!-- OPTIONAL SCRIPTS -->
 <script src="~/dashboard/plugins/chart.js/Chart.min.js"></script>
 <!-- AdminLTE for demo purposes -->
-@*<script src="~/dashboard/js/demo.js"></script>*@
+<script src="~/dashboard/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="~/dashboard/js/pages/dashboard3.js"></script>
