--- a/FM_MyStat.Web/Views/Student/Index.cshtml
+++ b/FM_MyStat.Web/Views/Student/Index.cshtml
@@ -20,8 +20,8 @@
         <hr>
 
         <div class="row">
-            <!-- Rating -->
             <div class="col-md-4 mb-4">
+                <!-- Rating -->
                 <div class="card">
                     <div class="card-header">
                         <h4 class="card-title">Your Rating</h4>
@@ -35,6 +35,29 @@
                             <div class="bg-primary text-white rounded-circle p-3">
                                 <i class="fas fa-trophy fa-3x"></i>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- News -->
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title">News academy</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="list-group">
+                            @for (int i = 0; i < Model.NewsList.Count; i++)
+                            {
+                                var news = Model.NewsList[i];
+                                <a href="#" class="list-group-item list-group-item-action">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div>
+                                            <h5>@news.Title</h5>
+                                            <h5>@news.Description</h5>
+                                            <h5>@news.Time</h5>
+                                        </div>
+                                    </div>
+                                </a>
+                            }
                         </div>
                     </div>
                 </div>
@@ -110,30 +133,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <div class="card-header">
-                        <h4 class="card-title">News academy</h4>
-                    </div>
-                    <div class="card-body">
-                        <div class="list-group">
-                            @for (int i = 0; i < Model.NewsList.Count; i++)
-                            {
-                                var news = Model.NewsList[i];
-                                <a href="#" class="list-group-item list-group-item-action">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div>
-                                            <h5 class="mb-1">@(i + 1). @news.Title @news.Description @news.Time @news.TimePublication</h5>
-                                        </div>
-                                    </div>
-                                </a>
-                            }
-                        </div>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
 </div>
