--- a/FM_MyStat.Web/Views/Teacher/Subjects.cshtml
+++ b/FM_MyStat.Web/Views/Teacher/Subjects.cshtml
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="~/dashboard/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" href="~/dashboard/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
 <link rel="stylesheet" href="~/dashboard/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
+<link rel="stylesheet" href="~/css/stulescards.css" />
 
 @{
     ViewData["Title"] = "Subject";
@@ -17,52 +18,26 @@
                 <div class="col-sm-6">
                     <h1>All Subjects</h1>
                 </div>
-                <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a asp-controller="Teacher" asp-action="Index">Home</a></li>
-                        <li class="breadcrumb-item active">Subjects</li>
-                    </ol>
-                </div>
             </div>
         </div>
     </section>
     <section class="content">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-header">
-                            <h3 class="card-title">Subject list with minimal information</h3>
+                @foreach (var item in Model)
+                {
+                    <div class="col-md-3 mb-4">
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="card-title">@item.Name</h5>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text"><strong>Name:</strong> @item.Name</p>
+                            </div>
                         </div>
-
-                        <div class="card-body">
-                            <table id="example2" class="table table-bordered table-hover dataTable dtr-inline" aria-describedby="example2_info">
-                                <thead>
-                                    <tr>
-                                        <th>Id</th>
-                                        <th>Name</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in Model)
-                                    {
-                                        <tr>
-                                            <td>@item.Id</td>
-                                            <td>@item.Name</td>
-                                        </tr>
-                                    }
-                                </tbody>
-
-                            </table>
-                        </div>
-                        <!-- /.card-body -->
                     </div>
-                    <!-- /.card -->
-                </div>
+                }
             </div>
-            <!-- /.col -->
-            <!-- /.row -->
         </div>
-        <!-- /.container-fluid -->
     </section>
 </div>
