--- a/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
@@ -1,72 +1,7 @@
 ﻿ <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4 sidebar_cs">
-    <!-- Brand Logo -->
-    @*  <a class="brand-link">
-    <img src="~/Dashboard/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-    <span class="brand-text font-weight-light">FM_MyStat</span>
-    </a> *@
-    <style>
-        .navbar_bg {
-            background-color: hsl(218, 41%, 15%);
-            background-image: radial-gradient(15px circle at 0% 0%, hsl(218, 41%, 35%) 15%, hsl(218, 41%, 30%) 35%, hsl(218, 41%, 20%) 75%, hsl(218, 41%, 19%) 80%, transparent 100%), radial-gradient(25px circle at 100% 100%, hsl(218, 41%, 45%) 15%, hsl(218, 41%, 30%) 35%, hsl(218, 41%, 20%) 75%, hsl(218, 41%, 19%) 80%, transparent 100%);
-            height: auto;
-            width: 100%;
-            padding: 10px; /* Add padding for better appearance */
-            box-sizing: border-box; /* Include padding in width calculation */
-        }
 
-        .sidebar_cs {
-            background: rgb(17,32,62);
-            background: linear-gradient(207deg, rgba(17,32,62,1) 0%, rgba(105,153,238,1) 99%);
-        }
-
-        .sidebar-image-container {
-            position: relative;
-            
-        }
-
-        .sidebar-image {
-            margin-bottom:20px;
-            margin-top: 20px;
-        }
-
-        .transparent-layer {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(26, 42, 120, 0.8);
-        }
-
-        hr {
-            border-top: 1px solid #bbb;
-            margin-top: 0px;
-            margin-bottom: 15px;
-            margin-left: 0px;
-            margin-right: 0px
-        }
-
-        .nav-it{
-            display: flex;
-            justify-content: space-between;
-        }
-
-/*         a{
-            display:flex;
-                }*/
-        .nav-item{
-            justify-content: space-between; 
-        }
-
-        .brand-letter {
-            display: none;
-            color: white;
-            font-size: 24px;
-            margin-left: 10px;
-        }
-
-    </style>
+    <link rel="stylesheet" href="~/css//stulessidebar.css">
 
     <div class="sidebar-image-container d-flex align-items-center justify-content-center mt-3">
 
